Extended test coverage for CurrentUserService and added test for RefreshSessionService.